--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,15 @@
                     <li class="nav-item active">
                         <a class="nav-link" style="color: rgb(239, 239, 252);" href="{{url_for('core.index')}}">Home<span class="sr-only">(current)</span></a>
                     </li>
+                    {%if not current_user.is_authenticated%}
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('core.about')}}">About Us</a>
                     </li>
+                    {%endif%}
                     {%if current_user.is_authenticated%}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('users.myaccount')}}">My Account</a>
+                    </li>
                     <li class="nav-item">  
                         <a class="btn btn-primary" href="{{url_for('core.newtransaction')}}" role="button">New Spnd</a>
                     </li>
