--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -6,8 +6,11 @@
         <h2>{{current_user.email}}</h1>
         <hr class="my-4">
         <h2>Linked accounts</h2>
+        <img src="https://telegram.org/img/t_logo.svg?1" width="40px" height="40px">
         {%if current_user.telegram_id != None%}
-            <img src="https://telegram.org/img/t_logo.svg?1" width="60px" height="60px"><button type="button"><a href="{{url_for('users.unlinktelegram')}}">Unlink</a></button>
+            <a href="{{url_for('users.unlinktelegram')}}" class="btn btn-danger">Unlink</a>
+        {%else%}
+            <a href="https://www.t.me/spndrbot" class="btn btn-primary">Use spndr on Telegram!</a>
         {%endif%}
     </div>
     <a href="{{url_for('users.editaccount')}}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Edit</a>
